Fixed JS tree not stretching to full height when in fullscreen mode

--- a/app/assets/stylesheets/isa_graph.scss
+++ b/app/assets/stylesheets/isa_graph.scss
@@ -38,6 +38,7 @@
     }
 
     #jstree {
+      height: auto !important;
       max-height: none !important;
     }
   }
